# Haskell-homeworks

./: README.md  stack.yaml
hse-hw2/: LICENSE
hw1/: hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs
hw1/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs
hw2/: LICENSE  hw2.cabal
hw2/src/: Block1.hs  Block2.hs  Block3.hs
hw2/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/: Lib.hs
hw3/test/: MockTestsSpec.hs
hw4/: README.md  hw4.cabal
hw4/bench/: Main.hs
hw4/src/: HwPart1.hs  HwPart2.hs
hw4/test/: TasksSpec.hs
