name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/Alexvsalexvsalex/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Alexey Shishkin
maintainer:          dr.alexa2000@mail.ru
copyright:           2020 Alexey Shishkin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1
                 ,     Block2
                 ,     Block3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             HW1Spec.hs
  other-modules:       Block1Spec
               ,       Block2Spec
               ,       Block3Spec
  hs-source-dirs:      test
  build-depends:       base
               ,       hspec
               ,       hw1
  default-language:    Haskell2010
