name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-Alexvsalexvsalex
license:             MIT
license-file:        LICENSE
author:              Alexey Shishkin
maintainer:          dr.alexa2000@mail.ru
copyright:           2020 Alexey Shishkin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1
                 ,     Block2
                 ,     Block3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
               ,       mtl
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             HW2Spec.hs
  other-modules:       Block1Spec
               ,       Block2Spec
               ,       Block3Spec
  hs-source-dirs:      test
  build-depends:       base
               ,       hspec
               ,       hw2
  default-language:    Haskell2010
