name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw4-Alexvsalexvsalex
license:             MIT
license-file:        LICENSE
author:              Alexey Shishkin
maintainer:          dr.alexa2000@mail.ru
copyright:           2020 Alexey Shishkin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

benchmark criterion-benchs
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench
  ghc-options:         -Wall
                       -eventlog
                       -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N4
  build-depends:       base >=4.7 && <5
               ,       criterion
               ,       microlens
               ,       random
               ,       monad-par
               ,       monad-par-extras
               ,       hw4
  default-language:    Haskell2010

library
  exposed-modules:     HwPart1
               ,       HwPart2
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
               ,       microlens
               ,       random
               ,       monad-par
               ,       monad-par-extras
               ,       comonad
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             HW4Spec.hs
  ghc-options:         -Wall
  other-modules:       TasksSpec
  hs-source-dirs:      test
  build-depends:       base
               ,       hspec
               ,       microlens
               ,       hspec-expectations
               ,       hw4
  default-language:    Haskell2010
